; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_setattr.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_setattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }
%struct.attr = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [12 x i8] c"other attrs\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mount*, i8*, %struct.attr*)* @realfs_setattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @realfs_setattr(%struct.mount* %0, i8* %1, %struct.attr* byval(%struct.attr) align 8 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mount*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mount* %0, %struct.mount** %5, align 8
  store i8* %1, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i8* @fix_path(i8* %9)
  store i8* %10, i8** %6, align 8
  %11 = load %struct.mount*, %struct.mount** %5, align 8
  %12 = getelementptr inbounds %struct.mount, %struct.mount* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %7, align 4
  %14 = getelementptr inbounds %struct.attr, %struct.attr* %2, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  switch i32 %15, label %40 [
    i32 128, label %16
    i32 131, label %22
    i32 130, label %28
    i32 129, label %34
  ]

16:                                               ; preds = %3
  %17 = load i32, i32* %7, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds %struct.attr, %struct.attr* %2, i32 0, i32 4
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @fchownat(i32 %17, i8* %18, i32 %20, i32 -1, i32 0)
  store i32 %21, i32* %8, align 4
  br label %42

22:                                               ; preds = %3
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = getelementptr inbounds %struct.attr, %struct.attr* %2, i32 0, i32 3
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @fchownat(i32 %23, i8* %24, i32 %26, i32 -1, i32 0)
  store i32 %27, i32* %8, align 4
  br label %42

28:                                               ; preds = %3
  %29 = load i32, i32* %7, align 4
  %30 = load i8*, i8** %6, align 8
  %31 = getelementptr inbounds %struct.attr, %struct.attr* %2, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @fchmodat(i32 %29, i8* %30, i32 %32, i32 0)
  store i32 %33, i32* %8, align 4
  br label %42

34:                                               ; preds = %3
  %35 = load %struct.mount*, %struct.mount** %5, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = getelementptr inbounds %struct.attr, %struct.attr* %2, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @realfs_truncate(%struct.mount* %35, i8* %36, i32 %38)
  store i32 %39, i32* %4, align 4
  br label %49

40:                                               ; preds = %3
  %41 = call i32 @TODO(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %42

42:                                               ; preds = %40, %28, %22, %16
  %43 = load i32, i32* %8, align 4
  %44 = icmp slt i32 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %42
  %46 = call i32 (...) @errno_map()
  store i32 %46, i32* %4, align 4
  br label %49

47:                                               ; preds = %42
  %48 = load i32, i32* %8, align 4
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %47, %45, %34
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i8* @fix_path(i8*) #1

declare dso_local i32 @fchownat(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @fchmodat(i32, i8*, i32, i32) #1

declare dso_local i32 @realfs_truncate(%struct.mount*, i8*, i32) #1

declare dso_local i32 @TODO(i8*) #1

declare dso_local i32 @errno_map(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
